<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoFurry Favs LiveWallpaper</string>
    <string name="settings_title">SoFurry LiveWallpaper settings</string>
    <string name="description">Your SoFurry favorites as rotating wallpaper!</string>
    <string name="preference_imagesize_title">Image Size</string>
    <string name="preference_imagesize_summary">Enables high-res image downloads for tablets</string>
    <string name="preference_wallpapermode_title">Scaling Mode</string>
    <string name="preference_wallpapermode_summary">Choose how the live wallpaper is scaled on the screen</string>
    <string name="preference_rotatetime_title">Change Interval</string>
    <string name="preference_rotatetime_summary">Time interval of wallpaper changes</string>
    <string name="preference_contentlevel_title">Content Level</string>
    <string name="preference_contentlevel_summary">Select age rating of displayed content</string>
    <string name="preference_contentsource_title">Content Source</string>
    <string name="preference_contentsource_summary">Select which content you want to see</string>
    <string name="preference_search_title">Search</string>
    <string name="preference_search_summary">Optional search term for art</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_username_summary">Your SoFurry username</string>
    <string name="preference_password_title">Password</string>
    <string name="preference_password_summary">Your SoFurry password</string>
</resources>
