<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

                <EditTextPreference
                        android:key="preference_username"
                        android:summary="@string/preference_username_summary"
                        android:title="@string/preference_username_title"
                        android:dialogTitle="@string/preference_username_title"
                        android:singleLine="true">
                        </EditTextPreference>
                <EditTextPreference
                        android:key="preference_password"
                        android:summary="@string/preference_password_summary"
                        android:title="@string/preference_password_title"
                        android:dialogTitle="@string/preference_password_title"
                        android:singleLine="true"
                        android:password="true">
                        </EditTextPreference>

    <ListPreference
            android:key="preference_rotatetime"
            android:title="@string/preference_rotatetime_title"
            android:summary="@string/preference_rotatetime_summary"
            android:entries="@array/rotatetime_names"
            android:entryValues="@array/rotatetime_values" />

    <ListPreference
            android:key="preference_contentlevel"
            android:title="@string/preference_contentlevel_title"
            android:summary="@string/preference_contentlevel_summary"
            android:entries="@array/contentlevel_names"
            android:entryValues="@array/contentlevel_values" />

</PreferenceScreen>
